Add M31 Flower post. Use small thumbnail images.

--- a/_posts/2020-03-07-m81.md
+++ b/_posts/2020-03-07-m81.md
@@ -4,8 +4,8 @@ date: 2020-03-07 18:00:00 -0700
 categories: [Astrophotography]
 collection: images
 tags: [Broadband, Galaxy, Messier]
-teaser: /assets/img/astrophotography/m81-lrgb-2020-03-07-teaser.jpg
 image:
+  thumb: /assets/img/astrophotography/m81-lrgb-2020-03-07-teaser.jpg
   path: /assets/img/astrophotography/m81-lrgb-2020-03-07.jpg
   alt: M81 Bode's Galaxy
 ---
