--- a/_posts/2020-04-28-m51-galaxy.md
+++ b/_posts/2020-04-28-m51-galaxy.md
@@ -4,8 +4,8 @@ date: 2020-04-28 18:00:00 -0700
 categories: [Astrophotography]
 collection: images
 tags: [Broadband, Galaxy, Messier]
-teaser: /assets/img/astrophotography/m51-lrgb-2020-04-28-teaser.jpg
 image:
+  thumb: /assets/img/astrophotography/m51-lrgb-2020-04-28-teaser.jpg
   path: /assets/img/astrophotography/m51-lrgb-2020-04-28.jpg
   alt: M51 Whirlpool Galaxy
 ---
