--- a/_posts/2020-05-16-antennae.md
+++ b/_posts/2020-05-16-antennae.md
@@ -4,8 +4,8 @@ date: 2020-05-16 18:00:00 -0700
 categories: [Astrophotography]
 collection: images
 tags: [Broadband, Galaxy, NGC]
-teaser: /assets/img/astrophotography/antennae-lrgb-2020-05-16-teaser.jpg
 image:
+  thumb: /assets/img/astrophotography/antennae-lrgb-2020-05-16-teaser.jpg
   path: /assets/img/astrophotography/antennae-lrgb-2020-05-16.jpg
   alt: Antennae Galaxies
 ---
