--- a/_posts/2020-09-26-melotte-15.md
+++ b/_posts/2020-09-26-melotte-15.md
@@ -4,8 +4,8 @@ date: 2020-09-26 18:00:00 -0700
 categories: [Astrophotography]
 collection: images
 tags: [Narrowband, Nebula, IC, Bicolor]
-teaser: /assets/img/astrophotography/melotte-15-bicolor-2020-09-26-teaser.jpg
 image:
+  thumb: /assets/img/astrophotography/melotte-15-bicolor-2020-09-26-teaser.jpg
   path: /assets/img/astrophotography/melotte-15-bicolor-2020-09-26.jpg
   alt: Melotte 15
 ---
