--- a/_posts/2020-04-27-m100-galaxy.md
+++ b/_posts/2020-04-27-m100-galaxy.md
@@ -4,8 +4,8 @@ date: 2020-04-27 18:00:00 -0700
 categories: [Astrophotography]
 collection: images
 tags: [Broadband, Galaxy, Messier]
-teaser: /assets/img/astrophotography/m100-lrgb-2020-04-27-teaser.jpg
 image:
+  thumb: /assets/img/astrophotography/m100-lrgb-2020-04-27-teaser.jpg
   path: /assets/img/astrophotography/m100-lrgb-2020-04-27.jpg
   alt: M100 Blowdryer Galaxy
 ---
