Fix ngc 7822 caption

--- a/_posts/2023-11-18-ngc7822.md
+++ b/_posts/2023-11-18-ngc7822.md
@@ -14,7 +14,7 @@ I used to be hesitant about 10 minute exposures simply because it requires a lot
 number of frames to get a good SNR.
 
 {% openseadragon {"image":"https://alexhelms.s3.amazonaws.com/public/assets/img/astrophotography/mosaic/2023_ngc7822_sho/ngc7822_sho.dzi"} %}
-{% include caption.html content="M110 LRGB" %}
+{% include caption.html content="NGC 7822 in SHO" %}
 
 ### Gear
 
